# bluecat-bam-v2-examples

./: .gitignore  CHANGELOG.md  LICENSE  README.md
nodejs/: bam-client.ts  package.json
nodejs/examples/: 01-connect.ts  02-add-host.ts  03-dhcp-reservation.ts  04-office-template.ts  office-template.yaml
python/: bam_client.py  pyproject.toml
python/examples/: 01_connect_and_sysinfo.py  02_add_host_record.py  03_bulk_add_from_csv.py  04_dhcp_reservation.py  05_search.py  06_servers_and_deploy.py  07_office_template.py  office-template.yaml
research/: 01-bluecat-api-overview.md  02-opensource-ecosystem.md  03-office-network-design.md  04-architecture-decision.md
